### added  - swagger ui.  - many comments for 1 person.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 server.port=4406
 spring.jpa.show-sql=true
+spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.allowed-origins=http://localhost:4406
+spring.mvc.cors.allowed-methods=GET, POST, PUT, DELETE
